syntax = "proto3";

option go_package = "swi-protobuf/session";

message Session {
    uint64 ttl = 1; // time to live of session
    string session_id = 2; // base64 encoded UUID of session
    uint64 created_at = 3; // unix timestamp on when session has been created
    uint64 updated_at = 4; // unix timestamp on when session has been updated
    uint64 compiled_at = 5; // unix timestamp on when session code has been compiled last time
}